[gd_scene load_steps=2 format=3 uid="uid://6ujrs1cn581a"]

[ext_resource type="Script" uid="uid://ddvpg86n7ppd" path="res://Scripts/minesweeper_window.gd" id="1_ukwct"]

[node name="MinesweeperWindow" type="Control"]
layout_mode = 3
offset_right = 969.6
offset_bottom = 552.96
script = ExtResource("1_ukwct")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(960, 512)
layout_mode = 1
anchors_preset = -1
offset_right = 970.0
offset_bottom = 557.0

[node name="TitleBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.054
offset_left = 5.0
offset_top = 5.0
offset_right = -4.59998
offset_bottom = 5.14016

[node name="Title" type="Label" parent="TitleBar"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="CloseButton" type="Button" parent="TitleBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -24.0
offset_bottom = 31.0
grow_horizontal = 0
text = "X"

[node name="WindowContent" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.005
anchor_top = 0.072
anchor_right = 0.005
anchor_bottom = 0.072
offset_left = 0.152
offset_right = 960.0
offset_bottom = 511.447
